# goop

./: .clang-format  .gitignore  CMakeLists.txt
parse/: CMakeLists.txt  ast_debug.cpp  parser.cpp  parser.h  parser_common.cpp  parser_common.h  parser_expr.cpp  parser_expr.h  parser_type.cpp  parser_type.h  tokens.cpp  tokens.h  util.h
parse/parser/: CMakeLists.txt  common.cpp  common.h  decl.cpp  decl.h  expr.cpp  expr.h  statement.cpp  statement.h  top_level.cpp  top_level.h  type.cpp  type.h
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  parse.go  tokens.go
tools/ast/: main.cpp
tools/tok/: main.cpp
